2006-09-27  Quentin Mathe <qmathe@club-internet.fr>
    
    * GNUmakefile: Updated to include etoile.make.

2005-06-14  Quentin Mathe <qmathe@club-internet.fr>
    
    WARNING: many tests fail
    * Source/GNUmakefile: Updated to include correctly GNUmakefile.preamble and
    GNUmakefile.postamble.

2005-06-14  Quentin Mathe <qmathe@club-internet.fr>
    
    WARNING: many tests fail
    * GNUmakefile.postamble:
    * GNUmakefile.preamble:
    Added (in order to allow compilation with 'make test=yes' from parent
    directories when UnitKit isn't already installed).
    * GNUmakefile: Updated to include GNUmakefile.preamble and
    GNUmakefile.postamble.

2005-05-15  Quentin Mathe <qmathe@club-internet.fr>
    
    WARNING: many tests fail
    * Source/GNUmakefile: Updated to support UnitKit in order to produce tests
    bundle.
    * Headers/IKApplicationIconProvider.h: Adopted UKTest protocol to support 
    UnitKit.
    (-invalidCache): Renamed -invalidateCache.
    (-invalidCacheAll): Renamed -invalidateCacheAll.
    * Source/IKApplicationIconProvider.m:
    Added macros DOCUMENT_PATH_COMPONENT and PLUGIN_PATH_COMPONENT for path 
    components used in a recurrent way.	Fixed 'invalid' term incorrect use in 
    method names when 'invalidate' should be used.
    (-initWithBundlePath:): Raise needed exceptions.
    (-initWithBundleIdentifier:): Raise needed exception.
    (-invalidCache): Renamed -invalidateCache.
    (-invalidCacheAll): Renamed -invalidateCacheAll.
    (-_cacheIcon:forVariant:): Fixed cached icon file name in order to include an 
    extension.
    (-initForTest): Add custom init method for UnitKit tests suite.
    (-testInit):
    (-testApplicationIcon):
    (-test_documentIconForExtension):
    (-test_compositeIconForVariant):
    (-test_compositedIconsPath):
    (-test_cachedIconForVariant):
    (-test_cacheIconForVariant):
    (-test_buildDirectoryStructureForCompositedIconsCache):
    (-test_blankDocumentIcon):