@@ -1,3 +1,13 @@
+2006-10-29  Quentin Mathe <qmathe@club-internet.fr>
+
+	* Source/GNUmakefile:
+	* Source/IKIcon.m:
+	* Source/IKCompositor.m:
+	* Headers/IKIcon.h:
+	* Headers/IKIconPositions.h:
+	Shut down various compiler warnings and replaced include statements by 
+	import ones. truncf is now used through GCC equivalent builtin function.
+
 2006-09-27  Quentin Mathe <qmathe@club-internet.fr>
     
     * GNUmakefile: Updated to include etoile.make.
